===
=== Emacs Modified for macOS
===

# VERSION 26.3-modified-1 (27 September 2019)

## Updates

- Emacs 26.3 released 28 August 2019
- Org 9.2.6


# VERSION 26.2-modified-2 (5 July 2019)

## New feature

David Holm's TabBarMode (v2.2), a minor mode to display a tab bar at
the top of the Emacs window, similar to the idea of web browsers tabs.
Brought to you by Rodney Sparapani <rsparapa@mcw.edu>.

Note that TabBarMode is *not* enabled by default. To use it, use `M-x
tabbar-mode` or add `(tabbar-mode)` in your `~/.emacs` file.

## Updates

- Org 9.2.4
- exec-path-from-shell 1.12

## User visible changes

In order to have a more complete AUCTeX and RefTeX setup, the
environment variables TEXINPUTS and BIBINPUTS are now also imported
from the shell at startup. Therefore, the following environment
variables are imported at startup by default: PATH, MANPATH, LANG,
TEXINPUTS, BIBINPUTS.


# VERSION 26.2-modified-1 (19 April 2019)

## Updates

- Emacs 26.2 released 14 April 2019
- Org 9.2.3


# VERSION 26.1-2-modified-2 (11 November 2018)

## Updates

- ESS 18.10.2 (patched to include the *.el files in the distribution)
- Org 9.1.14

## User visible changes

- Polymode is removed from the distribution. See
  https://polymode.github.io/ to install the package.


# VERSION 26.1-2-modified-1 (31 May 2018)

## Updates

- Emacs 26.1 released 28 May 2018
- Org 9.1.13

# VERSION 25.3-modified-2 (18 January 2018)

## Updates

- AUCTeX 12.1
- Org 9.1.6


# VERSION 25.3-modified-1 (16 November 2017)

This version brings many package updates. I realize I somewhat fell
behind!

- Emacs 25.3
- ESS 17.11
- AUCTeX 11.91
- Org 9.1.3
- markdownmode.el v2.3


# VERSION 25.2-modified-2 (2 June 2017)

## Updates

- Org 9.0.7
- polymode 2017-03-07
- markdownmode.el v2.2

## Bug fix

- markdownmode.el was broken in the previous release.


# VERSION 25.2-modified-1 (4 May 2017)

## Updates

- GNU Emacs 25.2, released April 21, 2017.
- Org 9.0.6

## User visible changes
