@@ -2,6 +2,18 @@
 === Emacs Modified for macOS
 ===
 
+# VERSION devel
+
+## New feature
+
+The distribution now includes dictionaries to use with Hunspell. You
+need to install an Hunspell binary separately, most likely through
+Homebrew. You may then use the included English, French, German and
+Spanish dictionaries by copying the files in the `Dictionaries`
+directory to `~/Library/Spelling`.
+
+
+
 # VERSION 26.3-modified-1 (27 September 2019)
 
 ## Updates
